# activate-linux

./: .clang-format  .gitignore  AGENTS.md  ARGS.md  CLAUDE.md  CMakeLists.txt  LICENSE.md  Makefile  Makefile.BSD  README.md  _astylerc  activate-linux-rpm.spec  activate-linux.1  activate-linux.spec  activate_linux  activate_linux.c  activate_macos.c  build-rpm.sh  build.sh  build_macos.sh  deps.nix  example.cfg  flake.nix  main.rs  package.nix  xmake.lua
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: fy2l74ri5ldv10r0c92czibv9r8gpjsm-source  v5dpdjbjkggys88dwkxb55d29bzzz0x9-source
.github/workflows/: linux-build.yml  obs-tarball.yml  windows-build.yml
docs/: index.html
res/: activate-linux.desktop
rpmbuild/RPMS/x86_64/: activate-linux-git-1.x86_64.rpm
rpmbuild/SPECS/: activate-linux.spec
rpmbuild/SRPMS/: activate-linux-git-1.src.rpm
src/: XEventTypes.cgen  activate_linux.c  cairo_draw_text.c  cairo_draw_text.h  color.c  color.h  config.c  config.h  draw.c  draw.h  i18n-helper.h  i18n.c  i18n.h  log.c  log.h  options.c  options.h  settings.h  wayland.c  wayland.h  wlr-layer-shell-unstable-v1.c  wlr-layer-shell-unstable-v1.h  x11.c  x11.h  xdg_shell.c
src/gdi/: gdi.c  gdi.h  gdi_draw.c  gdi_draw.h
src/wayland/: wayland.c  wayland.h  wlr-layer-shell-unstable-v1.c  wlr-layer-shell-unstable-v1.cgen  wlr-layer-shell-unstable-v1.h  wlr-layer-shell-unstable-v1.hgen  xdg-shell.cgen  xdg_shell.c
src/x11/: XEventTypes.cgen  x11.c  x11.h
